add documentation link to config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "html-calendar"
 authors = [{name = "Jorge Monforte Gonzalez", email = "yo@llou.net"}]
 readme = "README.rst"
 dynamic = ["version", "description"]
+documentation = "https://html-calendar.readthedocs.io/en/latest/"
 classifiers = [
 	"Development Status :: 3 - Alpha",
 	"Environment :: Web Environment",
