--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Upload Python Package
 
-on:
-  push:
-    tags:
-      - 'v*.*.*'
+on: push
+  #  push:
+  #  tags:
+  #   - 'v*.*.*'
 
 jobs:
   build:
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel
+          pip install setuptools wheel build
 
       - name: Build package
         run: python -m build
