--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Create Release
         uses: actions/create-release@v1
+        with:
           draft: true
           prerelease: true
 
