--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         with:
-          token: ${{ UPLOAD_TOKEN }}
+          token: ${{ secrets.UPLOAD_TOKEN }}
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist
           asset_name: my_project-${{ github.ref }}.tar.gz
