add upload token as variable-fix-fix-fix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,9 @@ jobs:
 
       - name: Create Release
         uses: actions/create-release@v1
-        with:
+        env:
           token: ${{ secrets.UPLOAD_TOKEN }}
+        with:
           draft: true
           prerelease: true
 
