--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Create Release
         uses: actions/create-release@v1
         env:
-          token: ${{ secrets.UPLOAD_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.UPLOAD_TOKEN }}
         with:
           draft: true
           prerelease: true
