--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Build and Release Python Package
 
 on: push
-  #  push:
-  #  tags:
-  #    - '*'
+  push:
+    tags:
+      - '*'
 
 jobs:
   build:
