trying it again 2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.UPLOAD_TOKEN }}
         with:
+          tag_name: "trying"
+          release_name: "trying"
           draft: true
           prerelease: true
 
