--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.UPLOAD_TOKEN }}
         with:
-          tag_name: "trying"
-          release_name: "trying"
+          tag_name: "trying2"
+          release_name: "trying2"
           draft: true
           prerelease: true
 
