--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,9 +38,10 @@ jobs:
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
+          GITHUB_TOKEN: ${{ secrets.UPLOAD_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist
-          asset_name: my_project-${{ github.ref }}.tar.gz
+          asset_path: ./dist/*.tar.gz
+          asset_name: htmlcalendar-${{ github.ref }}.tar.gz
           asset_content_type: application/gzip
 
