--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
+        env:
           GITHUB_TOKEN: ${{ secrets.UPLOAD_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
