--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/htmlcalendar-${{ github.ref }}.tar.gz
+          asset_path: ./dist/*.tar.gz
           asset_name: htmlcalendar-${{ github.ref }}.tar.gz
           asset_content_type: application/gzip
 
