--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,8 +41,8 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/*.tar.gz
-          asset_name: htmlcalendar-${{ github.ref }}.tar.gz
+          asset_path: ./dist/html-calendar-${{ github.ref }}.tar.gz
+          asset_name: html-calendar-${{ github.ref }}.tar.gz
           asset_content_type: application/gzip
 
 
